gobmkida/c3/blunder_size
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/engine/utils.c:1370:12: error: expected expression
*( _OWORD *)value = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/engine/utils.c:1370:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)value = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/engine/utils.c:1471:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v31] != 3 && *i == *v30 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/engine/utils.c:1530:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v28] != 3 && *j == *v27 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/engine/utils.c:1547:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v38] != 3 && *k == *v37 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/engine/utils.c:1565:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v42] != 3 && *m == *v41 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/engine/utils.c:1583:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[v46] != 3 && *n == *v45 ) 
     ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/blunder_size/src/obj/1/utils.o] Error 1
